@@ -21,6 +21,7 @@
 - PHP Version downgrade to 8.4 to support hosting deployment.
 - System logs now are collapsed so they take less space.
 - LogWorker prefix for each type of log.
+- Template component now sanitazes file paths.
 
 #### Fixed
 - Skeleton: Sites folder not accounted for deploy.sh and index.php
